# version-xpack

./: .npmignore  CHANGELOG.md  CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json  xpack.json
include/micro-os-plus/: version.h  versions.h
meta/: CMakeLists.txt  micro-os-plus-version-config-version.cmake  micro-os-plus-version-config.cmake  xpack-helper.cmake
sources/: CMakeLists.txt
sources/include/micro-os-plus/: version.h
